<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdActivity">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="@dimen/vertical_1" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="@dimen/vertical_2" />


    <ScrollView
      android:id="@+id/horizontal_AdCreation_scrollView"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline15"
      app:layout_constraintStart_toStartOf="@+id/guideline14"
      app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/vertical_AdCreation_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_AdCreation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/editTitleAdCreation"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/streetNumber_AdCreation_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/street_AdCreation_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streetAdCreation"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/number_AdCreation_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/numberAdCreation"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/streetNumberEdit_AdCreation_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/street_AdCreation_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/editStreetAdCreation"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/number_AdCreation_ediText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.5"
                    android:hint="@string/editNumberAdCreation"
                    android:inputType="text"
                    android:minEms="4"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cityNpa_AdCreation_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/city_AdCreation_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cityAdCreation"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/npa_AdCreation_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0"
                    android:text="@string/npaAdCreation"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cityNpaEdit_AdCreation_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/city_AdCreation_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/editCityAdCreation"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/npa_AdCreation_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.5"
                    android:hint="@string/editNpaAdCreation"
                    android:inputType="number"
                    android:minEms="4"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_AdCreation_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_AdCreation_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priceAdCreation"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pricePeriod_AdCreation_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0"
                    android:text="@string/periodAdCreation"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/priceEdit_AdCreation_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/price_AdCreation_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:ems="6"
                    android:hint="@string/editPriceAdCreation"
                    android:inputType="number" />

                <TextView
                  android:id="@+id/francs_AdCreation_textView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="16dp"
                  android:text="@string/francsAdCreation"
                  android:textAlignment="center"
                  android:textSize="18sp" />
                <Spinner
                  android:id="@+id/period_AdCreation_spinner"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:layout_weight="0"
                  android:layout_marginTop="0dp"
                  android:layout_marginEnd="0dp"
                  android:entries="@array/periodList" />
            </LinearLayout>

            <TextView
                android:id="@+id/description_AdCreation_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/descriptionAdCreation"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/description_AdCreation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/editDescriptionAdCreation"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:minLines="3"
                android:scrollbars="vertical" />

            <HorizontalScrollView
              android:id="@+id/picturesScroll_AdCreation_ScrollView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp">

                <LinearLayout
                  android:id="@+id/pictures_AdCreation_linearLayout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
              android:id="@+id/addPhoto_AdCreation_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:paddingStart="40dp"
              android:paddingEnd="16dp"
              android:layout_marginStart="@dimen/margin_button"
              android:layout_marginEnd="@dimen/margin_button"
              android:background="@drawable/style_secondary"
              android:drawableEnd="@drawable/ic_add_photo"
              android:gravity="center"
              android:text="@string/cameraButtonAdCreation"
              android:textAllCaps="false"
              android:textColor="@color/primaryStart"
              android:textSize="16sp" />

            <HorizontalScrollView
                android:id="@+id/panoramaScroll_AdCreation_ScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:id="@+id/panorama_AdCreation_linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
              android:id="@+id/createVirtualTour_AdCreation_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="0dp"
              android:paddingStart="40dp"
              android:paddingEnd="16dp"
              android:background="@drawable/style_secondary"
              android:drawableEnd="@drawable/ic_vrpano"
              android:layout_marginStart="@dimen/margin_button"
              android:layout_marginEnd="@dimen/margin_button"
              android:text="@string/createPanoramaTourButton"
              android:textAllCaps="false"
              android:textColor="@color/primaryStart"
              android:textSize="16sp" />
            <Button
              android:id="@+id/confirm_AdCreation_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="16dp"
              android:layout_marginStart="@dimen/margin_button"
              android:layout_marginEnd="@dimen/margin_button"
              android:background="@drawable/style_primary"
              android:text="@string/confirmButtonAdCreation"
              android:textAllCaps="false"
              android:textColor=" #FFFFFF "
              android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>